# KineticDefenseSim

./: .gitignore  DEV_BOT_PERSONA.md  README.md  ROADMAP.md  main.py  main_6dof.py  pyproject.toml  requirements.txt  run_sim.bat  setup.bat
src/core/: battle_manager.py  types.py
src/estimation/: ekf.py
src/gnc/: control.py  guidance.py
src/legacy/: config.py  entities.py  estimation.py  guidance.py  physics.py  sensors.py
src/models/: missile.py  threat.py
src/physics/: environment.py
